--- a/templates/base.html
+++ b/templates/base.html
@@ -105,17 +105,8 @@
     </div>
   </section><!-- End Hero -->
 
+  
   <main id="main">
-
-
-   
-
-
-
-   
-
-   
-
     <!-- ======= About Section ======= -->
     <!--<section id="about" class="about">
       <div class="container">
@@ -273,6 +264,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-aos="zoom-in">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 1</h4>
               <p>App</p>
@@ -282,7 +274,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -292,7 +284,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 2</h4>
               <p>App</p>
@@ -302,7 +294,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 2</h4>
               <p>Card</p>
@@ -312,7 +304,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 2</h4>
               <p>Web</p>
@@ -322,7 +314,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 3</h4>
               <p>App</p>
@@ -332,7 +324,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 1</h4>
               <p>Card</p>
@@ -342,7 +334,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 3</h4>
               <p>Card</p>
@@ -352,7 +344,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-aos="zoom-in">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <img src="https://www.ghanayello.com/img/gh/b/1599205860-88-conceptz-ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -397,16 +389,16 @@
         <ul class="faq-list" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" class="collapsed question" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" class="collapsed question" href="#faq1"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4> <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
               </p>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in"href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in"href="#faq2" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -415,7 +407,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq3" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
@@ -424,7 +416,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq4" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4> <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -433,7 +425,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq5" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
@@ -442,7 +434,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq6" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
@@ -762,6 +754,9 @@
         </div>
     </div>
 </footer>
+
+
+  <!-- Template Main JS File -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
@@ -775,6 +770,8 @@
   <script src="static/js/main.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <!-- Bootstrap Main JS File -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
