--- a/templates/home.html
+++ b/templates/home.html
@@ -90,11 +90,6 @@
 </script>
 
 
-
-
-
-
-
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-up"
@@ -102,16 +97,20 @@
       <h3>We Are</h3>
       <h1>Strong Skills International</h1>
     
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="#" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
+
+
+
+
 
   <main id="main">
 
 
    
 
-
+  <!-- ======= ABOUT US ======= -->
     <section id="team" class="team">
       <div class="container">
         <div class="section-title">
@@ -136,14 +135,11 @@
       </div>
       
     </section>
-
-
-   
+    
+    
 
     <section id="services" class="services" style="margin-bottom:50px;">
       <div class="container">
-
-
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="250"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
@@ -176,12 +172,13 @@
               <p class="description">Single product, event organisations and entity advertisment is our craft.</p>
             </div>
           </div>
+          
 
         </div>
-
       </div>
     </section>
-
+    <!--END IF ABOUT US-->
+    
     <!-- ======= About Section ======= -->
     <!--<section id="about" class="about">
       <div class="container">
@@ -227,7 +224,7 @@
               <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Sustainability</h6>
               <h1 style="color:white;text-align:left;"><b>Building prosperity & self-sufficiency</b></h1>
               <h5 style="color:white; margin-bottom:10px; text-align:left;"> our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
-                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Learn More -</h6>
+                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  Learn More -</a></h6>
               </h5>
               
             </div>
@@ -243,7 +240,9 @@
         </div>-->
 
       </div>
-    </section><!-- End Cta Section -->
+    </section>
+    
+    <!-- End Cta Section -->
 
 
     <!-- ======= Services Section ======= -->
@@ -278,19 +277,15 @@
         </div>
         <div class="texto-produto3">
           <h2>LOGISTICS </h2>
-         
         </div>
-
       </div>
-      
-      
+
     </section><!-- End Services Section -->
     <div class="section-title" style="background-color:#fff;">
-      <h2  style="background-color:#fff;  height: 30px; color:#000; box-shadow: 0 2px 10px -3px #117964; border-radius:0;">SEE MORE</h2> 
-      <h2  style="background-color:blue; height: 30px;  border-radius:0 5px 5px 0; color:#000;">- </h2> 
-   
+      <h2  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:120px; padding:13px; border-radius:0;font-size:11px; box-shadow: 0 2px 10px -3px #117964;"> <a href="/our-businesses" style="color:blue;">SEE MORE</a></h2> 
+  
     </div>
-
+ 
     <!-- ======= Features Section ======= -->
     <!--<section id="features" class="features">
       <div class="container">
@@ -569,23 +564,20 @@
 
 
        <!-- ======= Cta Section ======= -->
-       <section id="cta" class="cta" >
+       <section id="ct" class="ct" >
         <div class="container">
-          
           <div class="text-center" >
             <div class="video-section">
               <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
                 <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Media</h6>
                 <h1 style="color:white;text-align:left;"><b>News Room</b></h1>
                 <h5 style="color:white; margin-bottom:10px; text-align:left;"> our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
-                  <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   See More -</h6>
+                  <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  See More -</a></h6>
                 </h5>
-                
               </div>
               <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
                 <img src="" style="width: 100%;"class="img-fluid" alt="">
                  </div> 
-             
             </div>
   
            <!--- <h3>Join our team</h3>
@@ -594,7 +586,13 @@
           </div>-->
   
         </div>
-      </section><!-- End Cta Section -->
+      </section>
+      <!-- End Cta Section -->
+
+
+
+
+
     <!-- ======= F.A.Q Section ======= -->
      <section id="faq" class="faq">
       <div class="container">
@@ -819,7 +817,6 @@
 
       </div>
     </section>End Contact Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -965,7 +962,6 @@
                   &copy; Copyright <strong><span>Strongskills</span></strong>. All Rights Reserved
                 </div>
                 <div class="col-lg-6 col-sm-5 text-right">
-                    
                   Designed by <a href="https://prestoghana.com/">Kalitex Creatives</a>
                 </div>
             </div>
@@ -985,10 +981,11 @@
   <script src="static/js/main.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <!-- Bootstrap Main JS File -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
