--- a/static/css/about.css
+++ b/static/css/about.css
@@ -29,7 +29,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", sans-serif;;
 }
 
 /*--------------------------------------------------------------
