--- a/static/css/sus.css
+++ b/static/css/sus.css
@@ -29,7 +29,7 @@ body {
   h4,
   h5,
   h6 {
-    font-family: "Nunito", sans-serif;
+    font-family:"Poppins", sans-serif;
   }
   
   /*--------------------------------------------------------------
