--- a/templates/blog.html
+++ b/templates/blog.html
@@ -106,7 +106,7 @@
             <article class="entry">
 
               <div class="entry-img">
-                <img src="assets/img/blog/blog-1.jpg" alt="" class="img-fluid">
+                <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="" class="img-fluid">
               </div>
 
               <h2 class="entry-title">
@@ -136,7 +136,7 @@
             <article class="entry">
 
               <div class="entry-img">
-                <img src="assets/img/blog/blog-2.jpg" alt="" class="img-fluid">
+                <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="" class="img-fluid">
               </div>
 
               <h2 class="entry-title">
@@ -166,7 +166,7 @@
             <article class="entry">
 
               <div class="entry-img">
-                <img src="assets/img/blog/blog-3.jpg" alt="" class="img-fluid">
+                <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="" class="img-fluid">
               </div>
 
               <h2 class="entry-title">
@@ -196,7 +196,7 @@
             <article class="entry">
 
               <div class="entry-img">
-                <img src="assets/img/blog/blog-4.jpg" alt="" class="img-fluid">
+                <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="" class="img-fluid">
               </div>
 
               <h2 class="entry-title">
@@ -260,31 +260,31 @@
               <h3 class="sidebar-title">Recent Posts</h3>
               <div class="sidebar-item recent-posts">
                 <div class="post-item clearfix">
-                  <img src="assets/img/blog/blog-recent-1.jpg" alt="">
+                  <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="">
                   <h4><a href="blog-single.html">Nihil blanditiis at in nihil autem</a></h4>
                   <time datetime="2020-01-01">Jan 1, 2020</time>
                 </div>
 
                 <div class="post-item clearfix">
-                  <img src="assets/img/blog/blog-recent-2.jpg" alt="">
+                  <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="">
                   <h4><a href="blog-single.html">Quidem autem et impedit</a></h4>
                   <time datetime="2020-01-01">Jan 1, 2020</time>
                 </div>
 
                 <div class="post-item clearfix">
-                  <img src="assets/img/blog/blog-recent-3.jpg" alt="">
+                  <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="">
                   <h4><a href="blog-single.html">Id quia et et ut maxime similique occaecati ut</a></h4>
                   <time datetime="2020-01-01">Jan 1, 2020</time>
                 </div>
 
                 <div class="post-item clearfix">
-                  <img src="assets/img/blog/blog-recent-4.jpg" alt="">
+                  <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="">
                   <h4><a href="blog-single.html">Laborum corporis quo dara net para</a></h4>
                   <time datetime="2020-01-01">Jan 1, 2020</time>
                 </div>
 
                 <div class="post-item clearfix">
-                  <img src="assets/img/blog/blog-recent-5.jpg" alt="">
+                  <img src="https://w0.peakpx.com/wallpaper/257/582/HD-wallpaper-wedding-rings-rings-bouchet-love-forever-flowers-wedding.jpg" alt="">
                   <h4><a href="blog-single.html">Et dolores corrupti quae illo quod dolor</a></h4>
                   <time datetime="2020-01-01">Jan 1, 2020</time>
                 </div>
