--- a/templates/main2.html
+++ b/templates/main2.html
@@ -1,58 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Strongskill</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="static/main1.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main1.css')}}">
- 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <!--Hey! This is the original version
-of Simple CSS Waves-->
 
-<div class="header">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <!--Content before waves-->
-    <div class="inner-header flex">
-    <!--Just the logo.. Don't mind this-->
-    
-    <h1><b>Supporting and Transforming your world</b></h1><br>
-</div>
-<button type="button" name="" id="" style="width:150px; color:blue; border-radius:40px; height:40px;" class="btn btn-primary" btn-lg btn-block>
-  <a href="/main" style="text-decoration:none; color:#fff;">Discover More</a></button>
+  <title>StrongSkills</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!--Waves Container-->
-    <div>
-    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-    viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-    <defs>
-    <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-    </defs>
-    <g class="parallax">
-    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
-    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-    <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-    </g>
-    </svg>
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- AOS CSS-->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="static/css/about1.css" rel="stylesheet">
+
+  <!-- Javascript AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</head>    
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      
+      <!-- Uncomment below if you prefer to use an image logo -->
+       
+      <a href="index.html" class="logo"><img src="static/img/me.png" alt="" class="img-fluid"></a>
+        <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto " href="/contact">RSVP</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav>
+      <!-- .navbar -->
     </div>
-    <!--Waves end-->
-    
+  </header><!-- End Header -->
+<script>
+  AOS.init();
+</script>
+
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div class="hero-container" data-aos="fade-up"
+    data-aos-duration="3000">
+   <!--  <a href="#" class="btn-get-started scrollto" style="margin-bottom: 10px;">Menu</a>
+     <a href="ss.html"class="btn-get-started scrollto" style="margin-bottom: 10px;">Message</a>
+       <a href="#" class="btn-get-started scrollto" style="margin-bottom: 10px;">Our Guest</a>
+     -->
+    <img src="static/img/me.png" alt="biglogo" width="402" border="0">
+
+      <a href="#" class="btn-get-started scrollto" style="margin-bottom: 10px;">Bridesmaid / BestMen</a>
+      <a href="/main"class="btn-get-started scrollto" style="margin-bottom: 10px;">Reservations</a>
+ <a href="clone.html"  class="btn-get-started scrollto" style="margin-bottom: 10px;">Our Story</a>
+       
+    <a href="#" class="btn-get-started scrollto" style="margin-bottom: 10px;">Media</a>
     </div>
-    <!--Header ends-->
-    
-    <!--Content starts-->
- 
-    <!--Content ends-->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  </section><!-- End Hero -->    
+</body>
 </html>
+
+
+
+
